--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -8,8 +8,16 @@ identifier_name:
   excluded:
     - id
 
+type_name:
+  excluded:
+    - ID
+
 function_body_length:
   warning: 50
+
+nesting: 
+  type_level:
+    warning: 2
 
 opt_in_rules:
 #  - anonymous_argument_in_multiline_closure
@@ -32,7 +40,7 @@ opt_in_rules:
   - discouraged_assert
   - discouraged_none_name
 #  - discouraged_object_literal
-  - discouraged_optional_boolean
+#  - discouraged_optional_boolean
 #  - discouraged_optional_collection
   - duplicated_key_in_dictionary_literal
   - empty_collection_literal
@@ -71,7 +79,7 @@ opt_in_rules:
 #  - let_var_whitespace
   - literal_expression_end_indentation
   - lower_acl_than_parent
-  - missing_docs
+#  - missing_docs
   - modifier_order
 #  - multiline_arguments
   - multiline_arguments_brackets
